--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev -m electron",
+    "dev": "quasar dev",
+    "dev:electron": "quasar dev -m electron",
     "build": "quasar build",
     "build:pwa": "quasar build -m pwa"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
+    "electron-builder": "^22.10.5",
     "is-up": "^4.0.0",
-    "quasar": "^1.0.0"
+    "knex": "^0.95.1",
+    "objection": "^2.2.14",
+    "quasar": "^1.0.0",
+    "sqlite3": "^5.0.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
