--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
+    "datejs": "^1.0.0-rc3",
     "electron-builder": "^22.10.5",
     "is-up": "^4.0.0",
     "knex": "^0.95.1",
