--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "internet-available": "^1.0.0",
     "is-up": "^4.0.0",
     "knex": "^0.95.1",
+    "node-notifier": "^9.0.0",
     "objection": "^2.2.14",
     "quasar": "^1.0.0",
     "sqlite3": "^5.0.2",
