--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,77 @@
-.DS_Store
-.thumbs.db
+# Dependencies
 node_modules
+jspm_packages
 
-# Quasar core related directories
-.quasar
-/dist
+package-lock.json
+packages/*/README.md
+!packages/nuxi/README.md
+packages/*/LICENSE
+*/**/yarn.lock
+/.yarn
 
-# Cordova related directories and files
-/src-cordova/node_modules
-/src-cordova/platforms
-/src-cordova/plugins
-/src-cordova/www
+# Logs
+*.log
 
-# Capacitor related directories and files
-/src-capacitor/www
-/src-capacitor/node_modules
+# Temp directories
+.temp
+.tmp
+.cache
 
-# BEX related directories and files
-/src-bex/www
-/src-bex/js/core
+# Lychee cache
+.lycheecache
 
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Generated dirs
+dist
+.nuxt
+.nuxt-*
+.vercel
+.netlify
+.output
+.output-*
+.gen
 
-# Editor directories and files
+# Junit reports
+reports
+
+# Coverage reports
+coverage
+*.lcov
+.nyc_output
+
+# VSCode
+.vscode
+
+# Intellij idea
+*.iml
 .idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+
+# OSX
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+.vercel_build_output
+.build-*
+.env
+.netlify
+
+fixtures-temp
+.pnpm-store
+eslint-typegen.d.ts
+.eslintcache
