--- a/package.json
+++ b/package.json
@@ -1,64 +1,17 @@
 {
-  "name": "dmon",
-  "version": "0.0.1",
-  "description": "A quasar framework based app for monitoring website downtime.",
-  "productName": "Downtime Monitor",
-  "author": "Yemi Kudaisi <yemikudaisi@gmail.com>",
+  "name": "nuxt-app",
   "private": true,
+  "type": "module",
   "scripts": {
-    "lint": "eslint --ext .js,.vue ./",
-    "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev",
-    "dev:electron": "quasar dev -m electron",
-    "build": "quasar build",
-    "build:pwa": "quasar build -m pwa"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
-    "core-js": "^3.6.5",
-    "datejs": "^1.0.0-rc3",
-    "electron-builder": "^22.10.5",
-    "internet-available": "^1.0.0",
-    "is-up": "^4.0.0",
-    "knex": "^0.95.1",
-    "node-notifier": "^9.0.0",
-    "objection": "^2.2.14",
-    "ping": "^0.4.0",
-    "quasar": "^1.0.0",
-    "sqlite3": "^5.0.2",
-    "vuex": "^3.6.2"
-  },
-  "devDependencies": {
-    "@quasar/app": "^2.0.0",
-    "babel-eslint": "^10.0.1",
-    "devtron": "^1.4.0",
-    "electron": "^9.0.0",
-    "electron-debug": "^3.0.1",
-    "electron-devtools-installer": "^3.0.0",
-    "electron-packager": "^14.1.1",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.1.2"
-  },
-  "browserslist": [
-    "last 10 Chrome versions",
-    "last 10 Firefox versions",
-    "last 4 Edge versions",
-    "last 7 Safari versions",
-    "last 8 Android versions",
-    "last 8 ChromeAndroid versions",
-    "last 8 FirefoxAndroid versions",
-    "last 10 iOS versions",
-    "last 5 Opera versions"
-  ],
-  "engines": {
-    "node": ">= 10.18.1",
-    "npm": ">= 6.13.4",
-    "yarn": ">= 1.21.1"
+    "nuxt": "^3.11.2",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   }
 }
