--- a/package.json
+++ b/package.json
@@ -11,9 +11,27 @@
     "tauri": "tauri dev"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.3",
+    "@nuxt/eslint": "^0.3.6",
+    "@pinia/nuxt": "^0.5.1",
+    "mitt": "^3.0.1",
     "nuxt": "^3.11.2",
-    "sass": "^1.75.0",
+    "nuxt-icon": "^0.6.10",
+    "pinia": "^2.1.7",
+    "radix-vue": "^1.7.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@nuxt/eslint-config": "^0.3.6",
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "@types/node": "^20.12.7",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/nuxt": "^10.9.0",
+    "eslint": "^9.0.0",
+    "eslint-plugin-perfectionist": "^2.8.0",
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "sass": "^1.75.0"
   }
 }
