--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuxt-icon": "^0.6.10",
     "pinia": "^2.1.7",
     "radix-vue": "^1.7.0",
+    "typeorm": "^0.3.20",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "zod": "^3.22.4"
