--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "vue"],
   
   "vetur.experimental.templateInterpolationService": true,
-  "eslint.experimental.useFlatConfig": true
+  "eslint.experimental.useFlatConfig": true,
+  "editor.tabSize": 2,
+  "editor.detectIndentation": false
 }
 }
