--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/vue": "^2.1.3",
     "@nuxt/eslint": "^0.3.6",
     "@pinia/nuxt": "^0.5.1",
+    "dayjs": "^1.11.10",
     "mitt": "^3.0.1",
     "nuxt": "^3.11.2",
     "nuxt-icon": "^0.6.10",
@@ -21,6 +22,7 @@
     "radix-vue": "^1.7.0",
     "typeorm": "^0.3.20",
     "vue": "^3.4.21",
+    "vue-data-ui": "^2.0.84",
     "vue-router": "^4.3.0",
     "zod": "^3.22.4"
   },
