--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nuxt/eslint-config": "^0.3.6",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@types/node": "^20.12.7",
+    "@types/nodemailer": "^6.4.14",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
     "eslint": "^9.0.0",
