--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@heroicons/vue": "^2.1.3",
     "@nuxt/eslint": "^0.3.6",
     "@pinia/nuxt": "^0.5.1",
+    "connection-string": "^4.4.0",
+    "core-js": "^3.36.1",
     "dayjs": "^1.11.10",
+    "emailjs-smtp-client": "^2.0.1",
     "mitt": "^3.0.1",
     "nuxt": "^3.11.2",
     "nuxt-icon": "^0.6.10",
@@ -31,7 +34,6 @@
     "@nuxt/eslint-config": "^0.3.6",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@types/node": "^20.12.7",
-    "@types/nodemailer": "^6.4.14",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
     "eslint": "^9.0.0",
