--- a/playground/Cargo.toml
+++ b/playground/Cargo.toml
@@ -11,4 +11,5 @@ lettre = "0.11.7"
 reqwest = "0.12.4"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 serde = { version = "1.0.201", features = ["derive"] }
+serde_json = "1.0.117"
 tokio = { version = "1.37.0", features = ["full"] }
