--- a/playground/Cargo.toml
+++ b/playground/Cargo.toml
@@ -14,3 +14,5 @@ rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
 serde = { version = "1.0.201", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.37.0", features = ["full"] }
+tokio-cron-scheduler = { version = "0.10.2", default-features = false }
+uuid = "1.8.0"
