--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "tauri": "tauri dev"
+    "tauri:dev": "tauri dev"
   },
   "dependencies": {
     "@heroicons/vue": "^2.1.3",
@@ -18,7 +18,6 @@
     "connection-string": "^4.4.0",
     "core-js": "^3.36.1",
     "dayjs": "^1.11.10",
-    "emailjs-smtp-client": "^2.0.1",
     "mitt": "^3.0.1",
     "nuxt": "^3.11.2",
     "nuxt-icon": "^0.6.10",
@@ -33,6 +32,8 @@
   "devDependencies": {
     "@nuxt/eslint-config": "^0.3.6",
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "@tauri-apps/api": "^1.5.6",
+    "@tauri-apps/cli": "^1.5.14",
     "@types/node": "^20.12.7",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
