--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "app"
-version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+name = "nettus-app"
+version = "0.0.1"
+description = "Nettus"
+authors = ["Yemi Kudaisi"]
 license = ""
-repository = ""
-default-run = "app"
+repository = "https://github.com/yemikudaisi/downtime-monitor"
+default-run = "nettus-app"
 edition = "2021"
 rust-version = "1.60"
 
@@ -15,17 +15,16 @@ rust-version = "1.60"
 tauri-build = { version = "1.5.1", features = [] }
 
 [dependencies]
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.6.1", features = [ "api-all"] }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 window-vibrancy = "0.4.0"
-lettre = "0.11.6"
-diesel = "2.1.6"
+chrono = "0.4.38"
 dotenv = "0.15.0"
-
-[features]
-# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
-# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
-# DO NOT REMOVE!!
-custom-protocol = [ "tauri/custom-protocol" ]
+lettre = "0.11.7"
+reqwest = "0.12.4"
+rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
+serde = { version = "1.0.201", features = ["derive"] }
+serde_json = "1.0.117"
+tokio = { version = "1.37.0", features = ["full"] }
+tokio-cron-scheduler = { version = "0.10.2", default-features = false }
+uuid = "1.8.0"
